home contact button activation

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -61,6 +61,8 @@
     margin-top: 1rem;
     animation: 3s fade-in 4.5s ease, 1s slide-right 4.5s forwards;
     transform: translateX(-101%);
+    font-weight: bold;
+    font-size: 1.5rem;
   }
 }
 
