--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -18,7 +18,8 @@
         }
 
         &__text {
-            font-size: 1.5rem;
+            font-size: 1.2rem;
+            text-align: justify;
         }
 
     }
