--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -4,6 +4,11 @@
   display: flex;
   min-height: 100vh;
 
+  &--darkmode {
+    background-color: vars.$dark-background;
+    color: vars.$light-text;
+  }
+
   &__sections {
     display: flex;
     flex-direction: column;
