--- a/src/components/ContactForm/contact-form.scss
+++ b/src/components/ContactForm/contact-form.scss
@@ -12,41 +12,23 @@
         border: none;
         font-family: "Nunito", sans-serif;
         font-size: 1.2rem;
+        background-color: vars.$light-grey;
 
         &:focus {
             border-bottom: 2px solid vars.$highlight-text;
         }
 
         &__name {
-            // opacity: 0;
             width: 49.47%;
-            // animation:
-            //     1s bounce-up .1s forwards,
-            //     .5s fade-in .1s forwards;
         }
 
         &__email {
-            // opacity: 0;
             width: 49.47%;
-            // animation:
-            //     1s bounce-up .1s forwards,
-            //     .5s fade-in .1s forwards;
-        }
-
-        &__subject {
-            // opacity: 0;
-            // animation:
-            //     1s bounce-up .2s forwards,
-            //     .5s fade-in .2s forwards;
         }
 
         &__message {
-            // opacity: 0;
             height: 10rem;
             resize: none;
-            // animation:
-            //     1s bounce-up .3s forwards,
-            //     .5s fade-in .3s forwards;
 
             &:focus {
                 outline: none;
@@ -56,12 +38,8 @@
     }
 
     &__submit {
-        // opacity: 0;
         margin-left: auto;
-        margin-top: 2rem;
-        font-size: 1.2rem;
-        // animation:
-        //     1s bounce-up .5s forwards,
-        //     .3s fade-in .5s forwards;
+        margin-top:.5 * vars.$gutter;
+        font-size: 1rem;
     }
 }
