--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -23,7 +23,7 @@
       font-weight: bold;
       font-size: 6rem;
       letter-spacing: .4rem;
-      color: vars.$dark-text;
+      // color: vars.$dark-text;
       font-family: "Roboto",
       sans-serif;
     }
