--- a/src/components/SuccessModal/success-modal.scss
+++ b/src/components/SuccessModal/success-modal.scss
@@ -2,25 +2,46 @@
 
 .success-modal {
     z-index: 2;
-        background: rgba(0, 0, 0, 0.3);
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        margin-left: -10rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        &__window {
-            border: none;
-            border-radius: .5rem;
-            background-color: vars.$light-text;
-            padding: 2 * vars.$gutter;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    &__window {
+        border: none;
+        border-radius: .5rem;
+        background-color: vars.$highlight-text;
+        color: vars.$light-text;
+        padding: 2 * vars.$gutter;
+        font-size: 1.5rem;
+        font-weight: bold;
+        animation: .3s fade-in forwards;
+        position: fixed;
+        top: 45%;
+        left: 40%;
+
+        &__close-button {
             font-size: 1.5rem;
-            font-weight: bold;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 3 * vars.$gutter;
-            animation: .3s fade-in forwards;
+            position: absolute;
+            top: 0;
+            right: 0;
+            margin: .5 * vars.$gutter;
+            transition: all .3s;
+            transform: rotate(45deg);
+
+            &:hover {
+                color: vars.$hover-text;
+                cursor: pointer;
+            }
+        }
+
+        &__text-content {
+            margin-top: vars.$gutter;
+        }
     }
 }
