--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,8 +1,10 @@
-$light-background: #eee;
-$dark-background: #222831;
-$nav-background: #01171d;
+$light-background: #FFFFFF;
+$dark-background: #1D1D1D;
+$middle-background: #2A2A2A;
+$nav-background: #181818;
+$transparent-background: rgba(0, 0, 0, 0);
 
-$light-text: #eee;
+$light-text: #FFFFDB;
 $dark-text: #212730;
 $highlight-text: #379e8d;
 $hover-text: #c59c15;
