--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -29,6 +29,11 @@
       transform: translateX(0);
     }
 
+    &__darkmode-toggle {
+      position: absolute;
+      top: 4 * vars.$gutter;
+    }
+
     &__close-button {
       color: vars.$light-text;
       font-size: 2.5rem;
