--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -42,6 +42,19 @@
       }
     }
 
+    &__language-toggle {
+      position: absolute;
+      top: 6 * vars.$gutter;
+      animation: .3 fade-out forwards;
+      opacity: 1;
+      transform: translateX(-100%);
+
+      &--active {
+        animation: 1s translate-right forwards,
+          .3s fade-in forwards;
+      }
+    }
+
     &__close-button {
       color: vars.$light-text;
       font-size: 2.5rem;
