--- a/src/components/Projects/projects.scss
+++ b/src/components/Projects/projects.scss
@@ -2,6 +2,8 @@
 
 .projects {
     display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     min-height: 100vh;
     padding: 4 * vars.$gutter;
     
