--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,33 +1,41 @@
 @use "../../styles/vars";
 
-.about {
-    display: flex;
-    min-height: 100vh;
-    max-height: 100vh;
+@media screen and (min-width: 1024px) {
 
-    &__content {
-        width: 50%;
+    .about {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 2 * vars.$gutter;
-        padding: 4 * vars.$gutter;
-
-        &__title {
-            min-width: 100%;
+        min-height: 100vh;
+        max-height: 100vh;
+    
+        &__content {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 2 * vars.$gutter;
+            padding: 4 * vars.$gutter;
+    
+            &__title {
+                min-width: 100%;
+            }
+    
+            &__text {
+                font-size: 1.2rem;
+                text-align: justify;
+            }
+    
         }
-
-        &__text {
-            font-size: 1.2rem;
-            text-align: justify;
+    
+        &__image {
+            object-fit: cover;
+            width: 40%;
+            height: 90%;
+            margin: auto;
         }
-
-    }
-
-    &__image {
-        object-fit: cover;
-        width: 40%;
-        height: 90%;
-        margin: auto;
     }
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+
+@media screen and (min-width: 767px) {}
