--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -1,26 +1,34 @@
 @use "../../styles/vars";
 
-.contact {
-    width: 100%;
-    height: 100vh;
-    display: flex;
+@media screen and (min-width: 1024px) {
 
-    &__content {
-        width: 50%;
+    .contact {
+        width: 100%;
+        height: 100vh;
         display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        padding: 4 * vars.$gutter;
-
-        &__text {
-            font-size: 1.2rem;
-            line-height: 1.5rem;
+    
+        &__content {
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            padding: 4 * vars.$gutter;
+    
+            &__text {
+                font-size: 1.2rem;
+                line-height: 1.5rem;
+            }
+        }
+    
+        &__map {
+            width: 50%;
+            height: 100%;
+            margin-left: auto;
         }
     }
-
-    &__map {
-        width: 50%;
-        height: 100%;
-        margin-left: auto;
-    }
 }
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {}
+
+@media screen and (min-width: 767px) {}
