--- a/src/components/App/app.scss
+++ b/src/components/App/app.scss
@@ -25,6 +25,25 @@
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {}
-
-@media screen and (min-width: 767px) {}
+@media screen and (max-width: 1023px) {
+    .app {
+        display: flex;
+        min-height: 100vh;
+    
+        &--darkmode {
+          background-color: vars.$dark-background;
+          color: vars.$light-text;
+        }
+    
+        &__sections {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          margin-left: auto;
+        }
+      }
+    
+      .highlight-text {
+        color: vars.$highlight-text;
+      }
+}
