--- a/src/components/ContactForm/contact-form.scss
+++ b/src/components/ContactForm/contact-form.scss
@@ -48,6 +48,94 @@
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .form {
+        display: flex;
+        flex-wrap: wrap;
+        gap: .5 * vars.$gutter;
 
-@media screen and (min-width: 767px) {}
+        &__input {
+            width: 100%;
+            height: 2.5rem;
+            padding: 1rem;
+            border: none;
+            font-family: "Nunito", sans-serif;
+            font-size: 1.2rem;
+            background-color: vars.$light-grey;
+
+            &:focus {
+                border-bottom: 2px solid vars.$highlight-text;
+            }
+
+            &__name {
+                width: 49.47%;
+            }
+
+            &__email {
+                width: 49.47%;
+            }
+
+            &__message {
+                height: 10rem;
+                resize: none;
+
+                &:focus {
+                    outline: none;
+                }
+            }
+
+        }
+
+        &__submit {
+            margin-left: auto;
+            margin-top: .5 * vars.$gutter;
+            font-size: 1rem;
+        }
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .form {
+        display: flex;
+        flex-wrap: wrap;
+        gap: .5 * vars.$gutter;
+
+        &__input {
+            width: 100%;
+            height: 2.5rem;
+            padding: 1rem;
+            border: none;
+            font-family: "Nunito", sans-serif;
+            font-size: 1.2rem;
+            background-color: vars.$light-grey;
+
+            &:focus {
+                border-bottom: 2px solid vars.$highlight-text;
+            }
+
+            &__name {
+                width: 49.47%;
+            }
+
+            &__email {
+                width: 49.47%;
+            }
+
+            &__message {
+                height: 10rem;
+                resize: none;
+
+                &:focus {
+                    outline: none;
+                }
+            }
+
+        }
+
+        &__submit {
+            margin-left: auto;
+            margin-top: .5 * vars.$gutter;
+            font-size: 1rem;
+        }
+    }
+}
