--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -32,53 +32,64 @@
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .contact {
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
+        flex-direction: column;
+        padding: .5 * vars.$gutter;
+        margin-top: 4 * vars.$gutter;
 
         &__content {
-            width: 50%;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
-            padding: 4 * vars.$gutter;
+            gap: 3 * vars.$gutter;
+            text-align: justify;
 
             &__text {
-                font-size: 1.2rem;
-                line-height: 1.5rem;
+                font-size: 1.5rem;
+                line-height: 1.2rem;
             }
         }
 
         &__map {
-            width: 50%;
-            height: 100%;
-            margin-left: auto;
+            width: 50rem;
+            height: 50rem;
+            align-self: center;
+            margin-top: 2 * vars.$gutter;
         }
     }
 }
 
 @media screen and (max-width: 767px) {
+
     .contact {
         width: 100%;
-        height: 100vh;
+        min-height: 100vh;
         display: flex;
+        flex-direction: column;
+        padding: .5 * vars.$gutter;
+        margin-top: 4 * vars.$gutter;
 
         &__content {
-            width: 50%;
             display: flex;
             flex-direction: column;
-            justify-content: space-evenly;
-            padding: 4 * vars.$gutter;
+            gap: 3 * vars.$gutter;
+            text-align: justify;
+
+            &__title {
+                font-size: 4rem;
+            }
 
             &__text {
-                font-size: 1.2rem;
-                line-height: 1.5rem;
+                font-size: 1.5rem;
+                line-height: 1.2rem;
             }
         }
 
         &__map {
-            width: 50%;
-            height: 100%;
-            margin-left: auto;
+            width: 25rem;
+            height: 25rem;
+            align-self: center;
+            margin-top: 2 * vars.$gutter
         }
     }
 }
