--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -128,7 +128,7 @@
             width: 90%;
             height: auto;
             align-self: center;
-            padding-top: 2 * vars.$gutter;
+            margin-top: 2 * vars.$gutter;
         }
     }
 }
@@ -164,7 +164,7 @@
             width: 100%;
             height: auto;
             align-self: center;
-            padding-top: 2 * vars.$gutter;
+            margin-top: 2 * vars.$gutter;
         }
     }
 }
