--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -41,12 +41,12 @@
         &__content {
             display: flex;
             flex-direction: column;
-            gap: 3 * vars.$gutter;
+            gap: 2 * vars.$gutter;
             text-align: justify;
 
             &__text {
-                font-size: 1.5rem;
-                line-height: 1.2rem;
+                font-size: 1.8rem;
+                line-height: 1.5rem;
             }
         }
 
@@ -89,7 +89,9 @@
             width: 25rem;
             height: 25rem;
             align-self: center;
-            margin-top: 2 * vars.$gutter
+            margin-top: 2 * vars.$gutter;
+            z-index: 1;
+            
         }
     }
 }
